--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.21.1",
         "openapi-types": "^12.1.3",
         "pg": "^8.13.1",
+        "react-router": "^7.1.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     },
